# mlTetris

./: .gitignore  README.md  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-environment-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-training-core/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-web-visualization/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-RESEARCH.md
.planning/phases/04-training-controls/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: __init__.py
src/environment/: __init__.py  config.py  tetris_env.py
src/training/: __init__.py  agent.py  callbacks.py  config.py  model_slots.py  train.py
src/web/: __init__.py  connection_manager.py  server.py  training_manager.py
tests/environment/: __init__.py  conftest.py  test_actions.py  test_env_creation.py  test_gymnasium_api.py  test_observations.py  test_rewards.py
tests/training/: __init__.py  conftest.py  test_agent.py  test_checkpoint.py  test_config.py  test_training.py
(+17 files in other folders)
